--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -43,10 +43,15 @@
   flex:2;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   padding: 5px;
+  background-color: white;
 }
 .filtering>div{
   padding: 5px;
   margin-bottom: 5px;
+  background-color: white;
+}
+.filtering>div h4{
+  background-color: white;
 }
 .filtering>div li{
   list-style: none;
@@ -55,13 +60,14 @@
   align-items: center;
   gap:5px;
   margin-top: 4px;
+  background-color: white;
 }
 
 .rightsection{
   flex: 8;
   padding: 5px;
  width: 100%;
-  
+ 
 }
 .uppersection{
   display: flex;
@@ -77,14 +83,25 @@
   background-color: white;
 }
 .uppersection>div:nth-child(2) button{
-  background-color: rgb(28, 28, 226);
+  background-color: white;
+  color: blue;
+  border: 1px solid grey;
+  padding: 3px 6px;
+  border-radius: 6px;
+  margin: 2px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+ 
+}
+.uppersection>div:nth-child(2)>button:nth-child(3){
+  background-color: rgb(67, 67, 238);
   color: white;
   padding: 3px 6px;
   border-radius: 6px;
   margin-right: 2px;
   font-weight: bold;
 }
-
 
 .slider {
   -webkit-appearance: none;
@@ -110,6 +127,7 @@
 
 
 .cards{
+  background-color: white;
   display: flex;
   gap: 10px;
   padding: 5px;
@@ -124,12 +142,16 @@
   display: flex;
   justify-content: space-between;
   gap: 20px;
- 
+  background-color: white;
 
 }
 .cards>div>img{
   width: 200px;
 }
+.cards p,.cards h5,.cards>div div{
+  background-color: white;
+}
+
 .cards>div:nth-child(2)>div:nth-child(1)>button{
 padding: 5px 8px;
 color:rgb(30, 227, 37);
@@ -161,6 +183,7 @@ font-weight: 600;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  background-color: white;
 }
 .cardbtnright>button{
   background-color: white;
@@ -172,6 +195,14 @@ font-weight: 600;
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.3s ease;
+}
+.cardbtnright>button:nth-child(1){
+  background-color: rgb(67, 67, 238);
+  color: white;
+  padding: 3px 6px;
+  border-radius: 6px;
+  margin-right: 2px;
+  font-weight: bold;
 }
 .cardbtnright>button:hover{
   background-color: #ccc;
